--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,9 +34,11 @@ jobs:
     #    cd ixo && ./gradlew allureReport
     #    zip allure-report.zip -r build/reports/allure-report
     - name: Generate report
+      if: always()
       run: |
         mvn allure:report
     - name: Upload artifacts
+      if: always()
       uses: actions/upload-artifact@v2
       with:
         name: allure-report
